force-app/main/default/objects/Campaign/fields/hostDepartment__c.field-meta.xml
<CustomField>
    <fullName>hostDepartment__c</fullName>
    <label>担当部署</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IoT営業1部</fullName>
            </value>
            <value>
                <fullName>IoT営業2部</fullName>
            </value>
            <value>
                <fullName>システムコンサルティング部</fullName>
            </value>
            <value>
                <fullName>ソリューション営業1部</fullName>
            </value>
            <value>
                <fullName>ソリューション営業2部</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>