force-app/main/default/objects/Campaign/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>埋め込みページのURL</label>
    <type>Url</type>
</CustomField>