force-app/main/default/objects/Campaign/fields/webToLead__c.field-meta.xml
<CustomField>
    <fullName>webToLead__c</fullName>
    <label>webToLead</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>